client/src/index.css
* {
  font-family: "Space Grotesk", sans-serif;
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

body {
  margin: 0;
  padding: 0;
}

.add-task-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 4rem 0;
}

.navbar {
  width: 100%;
  background-color: black;
  color: white;
  height: 10vh;
  border-bottom: 1px solid #ddd;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
}

.form__input {
  min-height: 20vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.input {
  border: 2px solid #008cba;
  border-radius: 4px;
  background-color: #f8f8f8;
  color: #000;
  transition: 0.3s;
  box-sizing: border-box;
  outline: none;
  margin: 0 5px;
  width: 50%;
  padding: 10px 15px;
}

.input:focus {
  border-color: #66afe9;
  outline: none;
}

.add-card-btn {
  font-weight: 900;
  font-family: cursive;
  width: 120px;
  padding: 10px;
  cursor: pointer;
  background-color: #5050e9;
  color: #fff;
  border: none;
  outline: none;
  height: 43px;
}

.container {
  width: 100%;
  min-height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px;
}

.head {
  border-radius: 10px;
  text-align: center;
  text-transform: capitalize;
  color: white;
  font-weight: 900;
  margin: 0px;
  padding: 1rem 0;
}

.pending__head {
  background-color: rgb(183, 6, 6);
}

.completed__head {
  background-color: rgb(0, 104, 0);
}

.ongoing__head {
  background-color: rgb(255, 115, 0);
}

.completed__wrapper,
.ongoing__wrapper,
.pending__wrapper {
  width: 32%;
  min-height: 60vh;
  display: flex;
  flex-direction: column;
  padding: 5px;
}

.pending__container {
  background-color: rgba(183, 6, 6, 0.154);
}

.ongoing__container {
  background-color: rgba(255, 115, 0, 0.154);
}

.completed__container {
  background-color: rgb(0, 104, 0, 0.154);
}

.card-container {
  width: 100%;
  min-height: 10vh;
  max-height: 40vh;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  padding: 5px;
  margin-top: 5px;
  border-radius: 5px;
}

.pending__items,
.ongoing__items,
.completed__items {
  width: 100%;
  border-radius: 5px;
  margin-bottom: 10px;
  background-color: white;
  padding: 1rem;
}

.comment {
  text-align: right;
  font-size: 14px;
  cursor: pointer;
  color: rgb(85, 85, 199);
}

.comment:hover {
  text-decoration: underline;
}

.comments__container {
  padding: 20px;
}

.comment__form {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-bottom: 30px;
}

.comment__form > label {
  margin-bottom: 15px;
}

.comment__form textarea {
  width: 80%;
  padding: 15px;
  margin-bottom: 15px;
}

.commentBtn {
  padding: 10px;
  width: 200px;
  background-color: #367e18;
  outline: none;
  border: none;
  color: #fff;
  height: 45px;
  cursor: pointer;
}

.comments__section {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.login__form {
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.login__form > label {
  margin-bottom: 15px;
}

.login__form > input {
  width: 70%;
  padding: 10px 15px;
  margin-bottom: 15px;
}

.btn {
  padding: 15px;
  cursor: pointer;
  margin: 10px;
  font-size: 16px;
  outline: none;
  width: 200px;
  background-color: #4caf50;
  border: 2px solid white;
  color: white;
  text-align: center;
  text-decoration: none;
  transition-duration: 0.4s;
  border-radius: 4px;
}

.btn:hover {
  background-color: white;
  color: #4caf50;
  border: 2px solid #4caf50;
}

